@@ -28,6 +28,7 @@ G 11069	update the mail.jar manifest to include DynamicImport-Package
 <no id>	integrate NTLM support, no longer needs jcifs.jar
 <no id>	add mail.pop3.cachewriteto property, default false
 <no id>	add mail.pop3.filecache.enable property for caching messages in tmp file
+<no id>	add mail.mime.ignorewhitespacelines property, default false
 
 
 		  CHANGES IN THE 1.4.3 RELEASE
